# fuibase

./: .gitignore  CMakeLists.txt  LICENSE  README.md  xmake.lua
.github/workflows/: ci.yml
examples/: demo.cpp  simple.cpp
include/fuibase/: app.hpp  core.hpp  fuibase.hpp  widgets.hpp
